# agentic-kaggle-tabular-template

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CURRENT_STATUS.md  EVALUATION.md  LICENSE  README.ko.md  README.md  TASK.md  frozen.txt  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  eda-explorer.md  exp-runner.md  feature-smith.md  kaggle-runner.md  premise-auditor.md  result-reviewer.md
case_studies/: README.md  playground-s6e5.md
conf/: config.yaml
conf/features/: base.yaml  te_example.yaml
conf/guard/: push_patterns.txt  secret_patterns.txt
conf/model/: lgbm.yaml  xgb.yaml
docs/: PROJECT_README.template.md  data_dictionary.md  eda.md  feature_engineering.md  harness_evolution.md  setup_questions.md
docs/checklists/: code_review.md
docs/tasks/: T2.1-baseline.md  _TEMPLATE.md
docs/templates/: expectation.yaml
docs/wiki/: README.md  colab_jobs.md  decisions.md  experiment_tracking.md  guard_tiers.md  infra.md  kaggle_jobs.md  lightning_jobs.md  merge_plan_ml_exp_workflow.md  notebook_conventions.md
examples/: README.md  run_example.py
kaggle/: README.md  dataset-metadata.json  gen_kernel.py  kernel-metadata.json  monitor.py  push_src_dataset.sh
scripts/: check_fold_inputs.py  decision_card.py  summarize.py
scripts/hooks/: _guardlib.py  guard_bash.py  guard_bash.sh  (+4 more)
specs/: .gitkeep
src/: __init__.py  cat_prep.py  config.py  cv.py  data.py  eda_utils.py  encoders.py  features.py  predict.py  registry.py  stack.py  train.py  train_common.py  train_lgbm.py  train_xgb.py  utils.py
(+2 files in other folders)
