[project]
name = "ml-template"
version = "0.1.0"
description = "ML/Kaggle 프로젝트 템플릿 (Hydra + OOF CV + 실험 로깅)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "wandb>=0.17",
    "kaggle>=1.6",        # ⚠️ kaggle CLI 동작이 버전마다 다름 — 헤드리스 실행 환경과 버전 맞출 것
    "hydra-core>=1.3",
    "optuna>=3.6",
]

[project.optional-dependencies]
# EDA: uv sync --extra eda
eda = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
# 모델 다양성(GPU/대형): uv sync --extra gpu — 필요한 것만 남겨 가볍게 유지
gpu = [
    "xgboost>=2.0",
    "catboost>=1.2",
    "pytabkit>=1.2",     # RealMLP/TabM 등 tabular NN. 불필요하면 제거
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
